@startuml

title __MODERATORERECENSIONI's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace views.user.moderatorerecensioni {
      class com.unisa.cinehub.views.user.moderatorerecensioni.ModeraRecensioniView {
          - filterText : TextField
          - grid : Grid<Recensione>
          + ModeraRecensioniView()
          - deleteRecensione()
          - prepareGrid()
          - reviewRecensione()
          - updateList()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.moderatorerecensioni {
      class com.unisa.cinehub.views.user.moderatorerecensioni.ReviewDialog {
          - contenutoRecensione : Paragraph
          - eliminaRecensione : Button
          + ReviewDialog()
          + addListener()
          + setRecensione()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace views.user.moderatorerecensioni {
      class com.unisa.cinehub.views.user.moderatorerecensioni.ReviewDialog.DeleteEvent {
          + DeleteEvent()
          + getRecensione()
      }
    }
  }
  

  com.unisa.cinehub.views.user.moderatorerecensioni.ModeraRecensioniView -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unisa.cinehub.views.user.moderatorerecensioni.ModeraRecensioniView o-- com.unisa.cinehub.control.GestioneCatalogoControl : gestioneCatalogoControl
  com.unisa.cinehub.views.user.moderatorerecensioni.ModeraRecensioniView o-- com.unisa.cinehub.control.ModerazioneControl : moderazioneControl
  com.unisa.cinehub.views.user.moderatorerecensioni.ModeraRecensioniView o-- com.unisa.cinehub.views.user.moderatorerecensioni.ReviewDialog : reviewDialog
  com.unisa.cinehub.views.user.moderatorerecensioni.ReviewDialog -up-|> com.vaadin.flow.component.dialog.Dialog
  com.unisa.cinehub.views.user.moderatorerecensioni.ReviewDialog o-- com.unisa.cinehub.data.entity.Recensione : recensione
  com.unisa.cinehub.views.user.moderatorerecensioni.ReviewDialog +-down- com.unisa.cinehub.views.user.moderatorerecensioni.ReviewDialog.DeleteEvent
  com.unisa.cinehub.views.user.moderatorerecensioni.ReviewDialog.DeleteEvent -up-|> com.vaadin.flow.component.ComponentEvent
  com.unisa.cinehub.views.user.moderatorerecensioni.ReviewDialog.DeleteEvent o-- com.unisa.cinehub.data.entity.Recensione : recensione


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
